Finished Thai Restaurant Assignment

--- a/about.html
+++ b/about.html
@@ -5,13 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li> <a href="./index.html">Home</a> </li>
+            <li> <a href="./menu.html">Menu</a> </li>
+            <li> <a href="./about.html">About</a> </li>
+            <li> <a href="./contact.html">Contact</a> </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img id="banner"
+         alt="Banner Logo"
+         src="./assets/images/banner.png"
+    >   
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+            <ul>
+                <li>Worcester, MA</li>
+                <li>Boston, MA</li>
+                <li>Lowell, MA</li>
+                <li>Long Beach, CA</li>
+            </ul>
+        <h2>Origin Story</h2>
+        <img src="assets/images/thai-restaurant.jpg">
+        <h3>Worcester, MA</h3>
+            <p>
+            While Worcester Thai Town may be diminutive in size, 
+            only occupying a half-mile stretch in Park Avenue, 
+            its existence has been symbolic and influential in Thai 
+            culture on a much grander scale, locally and transnationally. 
+            As the first officially recognized Thai Town in the nation, and 
+            located in a city with the largest Thai population outside of Thailand, 
+            this designated area has grown into a hub of culture.
+            </p>
     </main>
 </body>
 </html>
