--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    
+
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li> <a href="./index.html">Home</a> </li>
+            <li> <a href="./menu.html">Menu</a> </li>
+            <li> <a href="./about.html">About</a> </li>
+            <li> <a href="./contact.html">Contact</a> </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img id="banner"
+         alt="Banner Logo"
+         src="./assets/images/banner.png"
+    >   
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -19,9 +34,11 @@
             <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
         </p>
         <h2>Contact Info</h2>
-        <p>
-            <strong>Phone Number:</strong> TBD
-        </p>
+        <div id="contact">
+            <p> <strong>Phone Number:</strong> 508-632-9189 </p>
+            <p> <strong>Address:</strong> 508 Park Ave, Worcester MA 01610 </p>
+            <p> <strong>Customer Service:</strong> HThaiML001@gmail.com </p>
+        </div>
     </main>
 </body>
 </html>
