--- a/index.html
+++ b/index.html
@@ -9,10 +9,28 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li> <a href="./index.html">Home</a> </li>
+            <li> <a href="./menu.html">Menu</a> </li>
+            <li> <a href="./about.html">About</a> </li>
+            <li> <a href="./contact.html">Contact</a> </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img id="banner"
+         alt="Banner Logo"
+         src="./assets/images/banner.png"
+    >   
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        <h2><strong> Your fast food can be your last food. </strong></h2>
+
+        <div class="service">
+            <h3>Dine In</h3>
+            <img src="assets/images/table-in-restaurant.jpg">
+        </div>
     </main>
 </body>
 </html>
